--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv-webpack": "^8.0.1",
     "gh-pages": "^3.2.3"
   },
   "homepage": "https://r0bomurlok.github.io/react-mesto-auth/"
