--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && cp ./CNAME ./build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
